fixes footer container margin on small screen

--- a/static/styles/footer.css
+++ b/static/styles/footer.css
@@ -9,7 +9,7 @@ footer {
 
 footer p {
     color: white;
-    font-size: 1vw;
+    font-size: 1em;
     text-align: justify;
 }
 
